--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -1,13 +1,13 @@
 {%  extends 'base.html' %}
 
-{% block title %}Register {% endblock %}
+{% block title %}Home {% endblock %}
 
 {% block extracss %}
 <link href="static/login.css" rel="stylesheet">
 {% endblock %}
 {%  block content  %}
 
-<h1>הרשמה</h1>
+<h1>בית</h1>
 
 <section class="vh-100">
   <div class="container-fluid h-custom">
@@ -17,8 +17,7 @@
           class="img-fluid" alt="Sample image">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-        <form method="POST">
-            {{ form.hidden_tag() }}
+
           <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
             <button type="button" class="btn btn-primary btn-floating mx-1">
               <i class="fab fa-facebook-f"></i>
@@ -36,48 +35,12 @@
           <div class="divider d-flex align-items-center sm-4">
             <p class="text-center fw-bold mx-3 mb-0"></p>
           </div>
-            <div class="form-outline sm-4">
-              {{ form.firstName.label(class_="form-label") }}
-              </br>
-              {{ form.firstName(class_="form-control") }}
-          </div>
-            <div class="form-outline sm-4 ">
-              {{ form.lastName.label(class_="form-label") }}
-              </br>
-              {{ form.lastName(class_="form-control") }}
-          </div>
-          <div class="form-outline sm-4 ">
-              {{ form.email.label(class_="form-label") }}
-              </br>
-              {{ form.email(class_="form-control") }}
-          </div>
 
-          <!-- Password input -->
-          <div class="form-outline sm-4">
-              {{  form.password.label(class_="form-label") }}
-          </br>
-              {{  form.password(class_="form-control")}}
-          </div>
 
           <div class="d-flex justify-content-between align-items-center">
-            <!-- Checkbox -->
-            <!--<div class="form-check mb-0">
-              <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-              <label class="form-check-label" for="form2Example3">
-                זכור אותי
-              </label>
-            </div>
-            <a href="#!" class="text-body">שכחתם ססמא?</a>
-          </div>
-            -->
-          <div class="text-center text-lg-start mt-4 pt-2">
-              {{ form.submit(class_="btn btn-primary btn-lg")}}
-              <!--style="padding-left: 2.5rem; padding-right: 2.5rem;"></button>*-->
-            <p class="small fw-bold mt-2 pt-1 mb-0">יש חשבון? היכנסו  <a href={{ url_for('main.login') }}
-                class="link-danger">כאן</a></p>
-          </div>
 
-        </form>
+
+
       </div>
     </div>
   </div>
