--- a/taskManager/templates/login.html
+++ b/taskManager/templates/login.html
@@ -65,8 +65,8 @@
           <div class="text-center text-lg-start mt-4 pt-2">
               {{ form.submit(class_="btn btn-primary btn-lg")}}
               <!--style="padding-left: 2.5rem; padding-right: 2.5rem;"></button>*-->
-            <p class="small fw-bold mt-2 pt-1 mb-0">אין חשבון ? הירשמו <a href="#!"
-                class="link-danger">רישום</a></p>
+            <p class="small fw-bold mt-2 pt-1 mb-0">אין חשבון ? הירשמו <a href={{  url_for('main.register') }}
+                class="link-danger">כאן</a></p>
           </div>
 
         </form>
@@ -77,7 +77,7 @@
     class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
     <!-- Copyright -->
     <div class="text-white mb-3 mb-md-0">
-      Copyright © 2020. All rights reserved.
+      Copyright SG-tech© 2022. All rights reserved.
     </div>
     <!-- Copyright -->
 
