--- a/taskManager/templates/navbar.html
+++ b/taskManager/templates/navbar.html
@@ -1,14 +1,5 @@
-{% extends 'base.html' %}
-{% block title %}Home {% endblock %}
-
-{% block extracss %}
-    <link href="static/login.css" rel="stylesheet">
-{% endblock %}
-
-{% block content %}
-<h1>בית</h1>
 <div class="btn-group">
-  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
     Dropdown
   </button>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -83,16 +74,3 @@
     <li><a class="dropdown-item" href="#">Menu item</a></li>
   </ul>
 </div>
-    </br>
-<a>dffdgfdgnjk</a>
-    </br>
-{#    <div class="footer>#}
-      <div
-    class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
-    <!-- Copyright -->
-    <div class="text-white mb-3 mb-md-0">
-      Copyright SG-tech© 2022. All rights reserved.
-</div>
-    </div>
-   </section>
-{%  endblock content %}
