win user managment

--- a/taskManager/templates/register.html
+++ b/taskManager/templates/register.html
@@ -58,6 +58,11 @@
           </br>
               {{  form.password(class_="form-control")}}
           </div>
+            <div class="form-outline sm-4">
+              {{  form.pass_confirm.label(class_="form-label") }}
+          </br>
+              {{  form.pass_confirm(class_="form-control")}}
+          </div>
 
           <div class="d-flex justify-content-between align-items-center">
             <!-- Checkbox -->
