--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<h1>בית</h1>
+<h1>בggית</h1>
 <div class="btn-group">
 {#  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">#}
 {#    Dropdown#}
