With home css viewport fix

--- a/taskManager/templates/register.html
+++ b/taskManager/templates/register.html
@@ -3,7 +3,7 @@
 {% block title %}Register {% endblock %}
 
 {% block extracss %}
-<link href="static/login.css" rel="stylesheet">
+<link href="../static/login.css" rel="stylesheet">
 {% endblock %}
 {%  block content  %}
 
