--- a/taskManager/static/login.css
+++ b/taskManager/static/login.css
@@ -17,10 +17,18 @@ body{
     direction: rtl;
 
 }
-.dropdown-menu{
-    height: 100vh;
-    width: 100vh;
+.dropdown{
+    /*height: 100vh;*/
+    /*width: 100vh;*/
     background-color: red;
     position: absolute;
     z-index: 15;
 }
+/*.section{*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    min-height: 100vh;*/
+/*}*/
+/*.section > * {*/
+/*    padding: 20px;*/
+/*}*/
