--- a/taskManager/static/style.css
+++ b/taskManager/static/style.css
@@ -1,3 +1,7 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
 .divider:after,
 .divider:before {
 content: "";
@@ -15,12 +19,18 @@ height: 100%;
 }
 body{
     direction: rtl;
+    align-items: stretch;
+    flex-direction: column;
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex: 1 0 auto;
 
 }
-.dropdown-menu{
+#footer{
+    flex:0;
     height: 100vh;
     width: 100vh;
-    background-color: red;
-    position: absolute;
-    z-index: 15;
+    margin-top: auto;
+    flex-shrink: 0;
 }
