--- a/taskManager/templates/base.html
+++ b/taskManager/templates/base.html
@@ -9,16 +9,12 @@
     <title>{% block title %}Defualt {% endblock title %}</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-
-  <div class="container">
+  <body class="d-flex flex-column min-vh-100">
 
   {%  block content %}
 
   {% endblock content %}
 
-
-  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="index.js"></script>
   </body>
