--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -2,97 +2,30 @@
 {% block title %}Home {% endblock %}
 
 {% block extracss %}
-    <link href="static/login.css" rel="stylesheet">
+    <link href="../static/style.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-<h1>בggית</h1>
-<div class="btn-group">
-{#  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">#}
-{#    Dropdown#}
-{#  </button>#}
-{#  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#  </ul>#}
-{#</div>#}
+    <h1>בית</h1>
+    <div class="btn-group">
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdown" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                Dropdown
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdown">
+                <li><a class="dropdown-item" href="#">Dropdown item</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown item</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown item</a></li>
+            </ul>
+        </div>
+    </div>
+{#            <div class="h-100 d-flex align-items-end flex-column flex-md-row  text-center text-md-end justify-content-end py-4 px-4 px-xl-5 bg-primary">#}
 
-<div class="btn-group">
-  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-    Right-aligned menu
-  </button>
-  <ul class="dropdown-menu dropdown-menu-end">
-    <li><a class="dropdown-item" href="#">Menu item</a></li>
-    <li><a class="dropdown-item" href="#">Menu item</a></li>
-    <li><a class="dropdown-item" href="#">Menu item</a></li>
-  </ul>
-</div>
-
-{#<div class="btn-group">#}
-{#  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">#}
-{#    Left-aligned, right-aligned lg#}
-{#  </button>#}
-{#  <ul class="dropdown-menu dropdown-menu-lg-end">#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#  </ul>#}
-{#</div>#}
-{##}
-{#<div class="btn-group">#}
-{#  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">#}
-{#    Right-aligned, left-aligned lg#}
-{#  </button>#}
-{#  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#  </ul>#}
-{#</div>#}
-{##}
-{#<div class="btn-group dropstart">#}
-{#  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">#}
-{#    Dropstart#}
-{#  </button>#}
-{#  <ul class="dropdown-menu">#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#  </ul>#}
-{#</div>#}
-{##}
-{#<div class="btn-group dropend">#}
-{#  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">#}
-{#    Dropend#}
-{#  </button>#}
-{#  <ul class="dropdown-menu">#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#  </ul>#}
-{#</div>#}
-{##}
-{#<div class="btn-group dropup">#}
-{#  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">#}
-{#    Dropup#}
-{#  </button>#}
-{#  <ul class="dropdown-menu">#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#    <li><a class="dropdown-item" href="#">Menu item</a></li>#}
-{#  </ul>#}
-{#</div>#}
-{#    </br>#}
-{#<a>dffdgfdgnjk</a>#}
-{#    </br>#}
-{#    <div class="footer>#}
-{#      <div#}
-{#    class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">#}
-{#    <!-- Copyright -->#}
-{#    <div class="text-white mb-3 mb-md-0">#}
-{#      Copyright SG-tech© 2022. All rights reserved.#}
-{#</div>#}
-{#    </div>#}
-{#   </section>#}
-{%  endblock content %}
+    <div id="footer" class="h-100 d-flex flex-column justify-content-end text-md-end  py-4 px-4 px-xl-5 bg-primary">
+            <!-- Copyright -->
+        <div class="text-white mb-3 mb-md-0">
+                Copyright SG-tech© 2022. All rights reserved.
+        </div>
+    </div>
+{% endblock content %}
