fixed drop-downbutton hebrew direction

--- a/taskManager/static/style.css
+++ b/taskManager/static/style.css
@@ -34,3 +34,9 @@ body{
     margin-top: auto;
     flex-shrink: 0;
 }
+.btn .btn-primary dropdown-items a.dropdown-menu .dropdown-toggle{
+    text-align: right;
+}
+a.dropdown-item{
+    text-align: right;
+}
