--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -11,12 +11,12 @@
         <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" id="dropdown" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                Dropdown
+                המשימות שלי
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdown">
-                <li><a class="dropdown-item" href="#">Dropdown item</a></li>
-                <li><a class="dropdown-item" href="#">Dropdown item</a></li>
-                <li><a class="dropdown-item" href="#">Dropdown item</a></li>
+                <li><a class="dropdown-item" href="#">הלקוחות שלי</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown item2</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown item3</a></li>
             </ul>
         </div>
     </div>
