--- a/taskManager/templates/login.html
+++ b/taskManager/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login {% endblock %}
 
 {% block extracss %}
-    <link href="static/login.css" rel="stylesheet">
+    <link href="login.css" rel="stylesheet">
 {% endblock %}
 {% block content %}
 
