--- a/taskManager/templates/base.html
+++ b/taskManager/templates/base.html
@@ -10,9 +10,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="d-flex flex-column min-vh-100">
+  <h1>{% block heading %}{% endblock heading %}</h1>
+      {% block menu %} {% endblock menu %}
+
   {%  block content %}
 
   {% endblock content %}
+      {% block footer %}
+      {% endblock footer %}
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="index.js"></script>
