--- a/taskManager/templates/base.html
+++ b/taskManager/templates/base.html
@@ -7,7 +7,7 @@
   {% block extracss %} {% endblock extracss %}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>{% block title %}Defualt {% endblock title %}</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
   </head>
   <body class="d-flex flex-column min-vh-100">
   <h1>{% block heading %}{% endblock heading %}</h1>
