--- a/taskManager/templates/base.html
+++ b/taskManager/templates/base.html
@@ -12,7 +12,17 @@
   <body class="d-flex flex-column min-vh-100">
   <h1>{% block heading %}{% endblock heading %}</h1>
       {% block menu %} {% endblock menu %}
-
+{% with messages = get_flashed_messages(with_categories=true) %}
+  <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <!-- <strong>Title</strong> --> {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
   {%  block content %}
 
   {% endblock content %}
