--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'menu.html' %}
+
 {% block title %}Home {% endblock %}
 
 {% block extracss %}
@@ -6,25 +7,14 @@
 {% endblock %}
 
 {% block content %}
-    <h1>בית</h1>
-    <div class="btn-group">
-        <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdown" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                המשימות שלי
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdown">
-                <li><a class="dropdown-item" href="#">הלקוחות שלי</a></li>
-                <li><a class="dropdown-item" href="#">סיכומי ביקור</a></li>
-            </ul>
-        </div>
-    </div>
-{#            <div class="h-100 d-flex align-items-end flex-column flex-md-row  text-center text-md-end justify-content-end py-4 px-4 px-xl-5 bg-primary">#}
-
-    <div id="footer" class="h-100 d-flex flex-column justify-content-end text-md-end  py-4 px-4 px-xl-5 bg-primary">
-            <!-- Copyright -->
-        <div class="text-white mb-3 mb-md-0">
-                Copyright SG-tech© 2022. All rights reserved.
-        </div>
-    </div>
+{#    <h1>בית</h1>#}
+{# <div class="h-100 d-flex align-items-end flex-column flex-md-row  text-center text-md-end justify-content-end py-4 px-4 px-xl-5 bg-primary">#}
+{##}
+{#    <div id="footer" class="h-100 d-flex flex-column justify-content-end text-md-end  py-4 px-4 px-xl-5 bg-primary">#}
+{#            <!-- Copyright -->#}
+{#        <div class="text-white mb-3 mb-md-0">#}
+{#                Copyright SG-tech© 2022. All rights reserved.#}
+{#        </div>#}
+{#    </div>#}
+{# </div>#}
 {% endblock content %}
