--- a/taskManager/templates/base.html
+++ b/taskManager/templates/base.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
-  <head>
+<body class="d-flex flex-column min-vh-100">
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+    <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+    {% if messages %}
+        {% for category, message in messages %}
+            <div id='flash' class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                <button type="button" class="fade close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <!-- <strong>Title</strong> --> {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
+{% block menu %} {% endblock menu %}
+<h1>{% block heading %}{% endblock heading %}</h1>
+{%  block content %}
+
+{% endblock content %}
+{% block footer %}
+{% endblock footer %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="../static/index.js"></script>
+</body>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,27 +34,4 @@
     <title>{% block title %}Defualt {% endblock title %}</title>
     <link rel="stylesheet" href="../static/style.css">
   </head>
-  <body class="d-flex flex-column min-vh-100">
-  <h1>{% block heading %}{% endblock heading %}</h1>
-      {% block menu %} {% endblock menu %}
-{% with messages = get_flashed_messages(with_categories=true) %}
-  <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
-  {% if messages %}
-    {% for category, message in messages %}
-      <div class="alert alert-{{ category }} alert-dismissible" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <!-- <strong>Title</strong> --> {{ message }}
-      </div>
-    {% endfor %}
-  {% endif %}
-{% endwith %}
-  {%  block content %}
-
-  {% endblock content %}
-      {% block footer %}
-      {% endblock footer %}
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="index.js"></script>
-  </body>
 </html>
