--- a/taskManager/templates/addsysadmin.html
+++ b/taskManager/templates/addsysadmin.html
@@ -1,6 +1,6 @@
 {% extends 'formBase.html' %}
-{% block title %}AddCustomer {% endblock %}
-{% block heading %} הוספת לקוח{% endblock heading %}
+{% block title %}AddSysAdmin {% endblock %}
+{% block heading %} הוספת מנהל רשת{% endblock heading %}
 
 {%  block content %}
 
