--- a/taskManager/templates/addtask.html
+++ b/taskManager/templates/addtask.html
@@ -26,7 +26,7 @@
                         <div class="form-outline sm-3">
                             {{ form.customer.label(class_="form-label") }}
                             </br>
-                            {{ form.customer (class_="form-control") }}
+                            {{ form.customer(class_="form-control") }}
                         </div>
                         <div class="form-outline sm-3">
                             {{ form.reportTo.label(class_="form-label") }}
@@ -47,5 +47,6 @@
                 </div>
             </div>
    </div>
+<script src="../static/dynamic.js"></script>
 
 {% endblock content %}
