--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -7,6 +7,8 @@
 {% endblock %}
 
 {% block content %}
+
+{#    <h1> Hello {{ user.firstName}}</h1>#}
 {#    <h1>בית</h1>#}
 {# <div class="h-100 d-flex align-items-end flex-column flex-md-row  text-center text-md-end justify-content-end py-4 px-4 px-xl-5 bg-primary">#}
 {##}
