--- a/taskManager/templates/menu.html
+++ b/taskManager/templates/menu.html
@@ -8,8 +8,8 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdown">
                 <li><a class="dropdown-item" href="#">הלקוחות שלי</a></li>
-                <li><a class="dropdown-item" href="#">סיכומי ביקור</a></li>
-                <li><a class="dropdown-item" href="#">התנתקות</a></li>
+                <li><a class="dropdown-item" href="#">שליחת סיכומי ביקור</a></li>
+                <li><a class="dropdown-item" href="{{url_for("main.logout") }}">התנתקות</a></li>
             </ul>
         </div>
     </div>
