--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -9,6 +9,7 @@
 {% block content %}
 <h1> המשימות שלי</h1>
     {% block table %}
+        <h1> hello {{ username }}</h1>
     <table class="styled-table">
     <thed>
         <tr>
@@ -17,6 +18,7 @@
             <th>זמן ליעד</th>
             <th>מנהל דיווח</th>
         </tr>
+
     </thed>
 
 
