--- a/taskManager/templates/formBase.html
+++ b/taskManager/templates/formBase.html
@@ -5,7 +5,7 @@
 {#<link href="../static/style.css" rel="stylesheet">#}
 {#{% endblock %}#}
 
-<h1>{% block heading %}בית{% endblock %}</h1>
+<h1>{% block heading %}{% endblock %}</h1>
 {% block menu %}{% endblock menu %}
 {% block content %}{% endblock content %}
 {% block footer %}
