--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -7,9 +7,9 @@
 {% endblock %}
 
 {% block content %}
-<h1> המשימות שלי</h1>
+    </br>
     {% block table %}
-        <h1> hello {{ username }}</h1>
+        <h3> שלום {{ session.username }} </h3>
     <table class="styled-table">
     <thed>
         <tr>
