--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -20,7 +20,9 @@
         </tr>
 
     </thed>
-
+    {%  for description in table.description %}
+    <p> {{ description }}</p>
+    {%  endfor %}
 
     </table>
 
