--- a/taskManager/templates/menu.html
+++ b/taskManager/templates/menu.html
@@ -9,7 +9,8 @@
             <ul class="dropdown-menu" aria-labelledby="dropdown">
                 <li><a class="dropdown-item" href="#">הלקוחות שלי</a></li>
                 <li><a class="dropdown-item" href="#">שליחת סיכומי ביקור</a></li>
-                <li><a class="dropdown-item" href="{{url_for("main.logout") }}">התנתקות</a></li>
+                <li><a class="dropdown-item" href="{{url_for("main.addTask")}}">יצירת משימה</a></li>
+                <li><a class="dropdown-item" href="{{url_for("main.logout")}}">התנתקות</a></li>
             </ul>
         </div>
     </div>
