with mapping between users and tasks

--- a/taskManager/templates/login.html
+++ b/taskManager/templates/login.html
@@ -20,7 +20,7 @@
                          class="img-fluid" alt="Sample image">
                 </div>
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                    <form method="POST">
+                    <form method="POST" action="">
                         {{ form.hidden_tag() }}
                         <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                             <button type="button" class="btn btn-primary btn-floating mx-1">
