--- a/taskManager/static/login.css
+++ b/taskManager/static/login.css
@@ -15,6 +15,7 @@ height: 100%;
 }
 body{
     direction: rtl;
+    /*margin-right: 40px;*/
 
 }
 .dropdown{
@@ -32,3 +33,6 @@ body{
 /*.section > * {*/
 /*    padding: 20px;*/
 /*}*/
+#dropdown {
+    margin: 15px;
+}
