with mapping between users and tasks

--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -20,8 +20,8 @@
         </tr>
 
     </thed>
-    {%  for description in table.description %}
-    <p> {{ description }}</p>
+    {%  for description in tasks %}
+    <p> {{ description.description }}</p>
     {%  endfor %}
 
     </table>
