--- a/taskManager/templates/addtask.html
+++ b/taskManager/templates/addtask.html
@@ -1,4 +1,4 @@
-{% extends 'formBase.html' %}
+{% extends 'menu.html' %}
 {% block title %}AddATask {% endblock %}
 {% block heading %} הוספת משימה{% endblock heading %}
 
