--- a/taskManager/templates/menu.html
+++ b/taskManager/templates/menu.html
@@ -4,9 +4,10 @@
         <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle" type="button" id="dropdown" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                המשימות שלי
+                תפריט ראשי
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdown">
+                <li><a class="dropdown-item" href="{{ url_for('main.home') }}">בית</a></li>
                 <li><a class="dropdown-item" href="#">הלקוחות שלי</a></li>
                 <li><a class="dropdown-item" href="#">שליחת סיכומי ביקור</a></li>
                 <li><a class="dropdown-item" href="{{url_for("main.addTask")}}">יצירת משימה</a></li>
