--- a/taskManager/templates/WorkReport.html
+++ b/taskManager/templates/WorkReport.html
@@ -17,8 +17,11 @@
                             {{ form.customer.label(class_="form-label") }}
                             </br>
                            {{ form.customer(class_="form-control") }}
-
-
+                        </div>
+                        <div class="form-outline sm-4 ">
+                            {{ form.clientEmailAddress.label(class_="form-label") }}
+                            </br>
+                           {{ form.clientEmailAddress(class_="form-control") }}
                         </div>
                         <div class="form-outline sm-4 ">
                             {{ form.client.label(class_="form-label") }}
