--- a/taskManager/templates/AddWorkReport.html
+++ b/taskManager/templates/AddWorkReport.html
@@ -3,6 +3,7 @@
 {% block heading %} דוח עבודה ללקוח{% endblock heading %}
 
 {%  block content %}
+{#    <script src="../static/Email2Domain.js"></script>#}
 
    <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -12,12 +13,6 @@
                         {{ form.hidden_tag() }}
                         <div class="divider d-flex align-items-center sm-4">
                             <p class="text-center fw-bold mx-3 mb-0"></p>
-                        </div>
-                        <div id="New_div"></div>
-                        <div class="form-outline sm-4 ">
-                            {{ form.customer.label(class_="form-label") }}
-                            </br>
-                           {{ form.customer(class_="form-control") }}
                         </div>
                         <div class="form-outline sm-4 ">
                             {{ form.clientEmailAddress.label(class_="form-label") }}
@@ -63,12 +58,20 @@
                         <div class="text-center text-lg-start mt-4 pt-2">
                             {{ form.submit(class_="btn btn-primary btn-lg")}}
                         </div>
-
+{#                            {% for domain in extDomains %}#}
+{#                                <p>{{ domain.externalDomain }}</p>#}
+{#                            {% endfor %}#}
                     </form>
+                    <div id="JS">
+
+                    </div>
                 </div>
             </div>
    </div>
-<script src="../static/dynamic.js"></script>
-    <script src="../static/workReport.js"></script>
+
+{#    <script type="text/javascript" extdomain = myFunc({{extDomains|tojson}})></script>#}
+{#    <script src="../static/dynamic.js"></script>#}
+{#    <script src="../static/workReport.js"></script>#}
+    <script src="../static/Email2Domain.js"></script>
 
 {% endblock content %}
