--- a/taskManager/templates/menu.html
+++ b/taskManager/templates/menu.html
@@ -11,6 +11,7 @@
                 <li><a class="dropdown-item" href="#">הלקוחות שלי</a></li>
                 <li><a class="dropdown-item" href="{{ url_for("main.WorkReport") }}">שליחת סיכומי ביקור</a></li>
                 <li><a class="dropdown-item" href="{{url_for("main.addTask")}}">יצירת משימה</a></li>
+                <li><a class="dropdown-item" href="{{url_for("main.addHyper")}}">יצירת שרת מארח</a></li>
                 <li><a class="dropdown-item" href="{{url_for("main.logout")}}">התנתקות</a></li>
             </ul>
         </div>
