--- a/taskManager/templates/login.html
+++ b/taskManager/templates/login.html
@@ -81,7 +81,7 @@
                 class="d-flex flex-column flex-md-row  text-center text-md-end justify-content-start py-4 px-4 px-xl-5 bg-primary">
             <!-- Copyright -->
              <div class="text-white mb-3 mb-md-0">
-                Copyright SG-tech© 2022. All rights reserved.
+                Copyright TROT LTD© 2022. All rights reserved.
              </div>
           </div>
         </footer>
