--- a/taskManager/templates/base.html
+++ b/taskManager/templates/base.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+{% block excss %} {% endblock excss %}
 <body class="d-flex flex-column min-vh-100">
 
 {% with messages = get_flashed_messages(with_categories=true) %}
@@ -30,7 +33,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   {% block extracss %} {% endblock extracss %}
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>{% block title %}Defualt {% endblock title %}</title>
     <link rel="stylesheet" href="../static/style.css">
   </head>
