--- a/taskManager/templates/home.html
+++ b/taskManager/templates/home.html
@@ -14,7 +14,7 @@
     {% block table %}
         <h3> שלום {{ session.username }} </h3>
         </br>
-        <h4>המשימות שלי:</h4>
+        <h4>המשימות הפתוחות שלי:</h4>
     <table class="table">
      <thead class="thead-dark">
         <tr>
@@ -45,11 +45,43 @@
            {{ row.reportTo}}
        </td>
     </tr>
-
  {%- endfor %}
-
-
-
+ </tbody>
+    </table>
+<br>
+<h4> נסגרו לאחרונה:</h4>
+        <br>
+    <table class="table">
+     <thead class="thead-dark">
+        <tr>
+            <th scope="col">פתיחה</th>
+            <th scope="col">שם הלקוח</th>
+            <th scope="col">תיאור המשימה</th>
+            <th scope="col">זמן ליעד</th>
+            <th scope="col">מנהל דיווח</th>
+        </tr>
+     </thead>
+ <tbody>
+ {%- for row in closedTasks %}
+    <tr>
+        <td class="complete">
+            <input class="form-check-input {{ row.id }}" type="checkbox" value="{{ row.id }}" id="flexCheckDefault" name="closetask-checkbox">
+       </td>
+       <td>
+           {{ row.customer}}
+       </td>
+           <td>
+           {{ row.description}}
+       </td>
+    </td>
+        <td>
+           {{ row.deadline}}
+       </td>
+            <td>
+           {{ row.reportTo}}
+       </td>
+    </tr>
+ {%- endfor %}
  </tbody>
  </table>
 
